fittings/crates/macros/tests/ui/fail/missing_fittings_error.stderr
error: service method error type must be `FittingsError`
 --> tests/ui/fail/missing_fittings_error.rs:3:53
  |
3 |     async fn hello(&self, params: ()) -> Result<(), String>;
  |                                                     ^^^^^^
